more db tests, equality operators for Trade and Contract

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ deps =
 
 commands =
   flake8 \
-    --ignore=E501,E266 \
+    --ignore=E501,E266,W503 \
     --exclude test.py \
     xcat
   pytest \
